--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Best Training and Placement Institute | Elite Associate - 100% Job Placement</title>
     <meta name="title" content="Best Training and Placement Institute | Elite Associate - 100% Job Placement">
     <meta name="description" content="Elite Associate is the top IT training and placement institute offering job-ready courses with 100% placement assistance. Join India's best training institute for guaranteed career success.">
-    <meta name="keywords" content="Best Training and Placement Institute, Job Ready Courses, Elite Placement, Top IT Training Institute, 100% Placement Assistance, IT Training, Career Development, Professional Courses, Skill Development, Job Guarantee">
+    <meta name="keywords" content="Best Training and Placement Institute in nagpur,IT Training Institute in Nagpur,top placement oriented training nagpur,,top placement training institute,Elite Placement in nagpur,Top Training and Placement Institute,best Career Counselling in Nagpur,Top career counsellors Nagpur,Elite best training Placement in nagpur,IT Training & institute in Maharashtra">
     <meta name="author" content="Elite Associate">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.eliteassociate.in/">
